add plagin for sonar

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,18 @@
         <spring.boot.mainclass>com.epam.esm.controller.app.Application</spring.boot.mainclass>
     </properties>
 
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>3.9.1.2184</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
