--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -21,6 +21,7 @@
     </properties>
 
     <build>
+        <finalName>certificates</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -50,6 +51,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.5.5</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <version>2.5.5</version>
             <scope>provided</scope>
         </dependency>
 
@@ -66,6 +79,14 @@
             <version>${springframework.version}</version>
         </dependency>
 
+
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version> 2.5</version>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 
